k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: super-erp
  labels:
    app.kubernetes.io/name: super-erp
    app.kubernetes.io/managed-by: kubectl
